# kafi-kaesseli

./: .gitignore  .travis.yml  Cargo.toml  README.markdown  README.md
.github/: main.workflow
.github/workflows/: main.yml  sigh.workflow
crates/core/: Cargo.toml
crates/core/migrations/2019-10-04-214840_products/: up.sql
crates/core/migrations/2019-10-05-080038_users/: up.sql
crates/core/migrations/2019-10-06-021959_balances/: down.sql
crates/core/src/: lib.rs  message_handler.rs  message_router.rs
crates/core/src/currency_handling/: currency_formatter.rs  mod.rs
crates/core/src/data_loader/: mod.rs
crates/core/src/services/: mod.rs  product_service.rs  user_service.rs
crates/telegram/: Cargo.toml
crates/telegram/src/: main.rs
migrations/2019-10-04-214840_products/: up.sql
migrations/2019-10-05-080038_users/: up.sql
migrations/2019-10-05-112220_transactions/: up.sql
migrations/2019-10-06-021959_balances/: up.sql
scripts/: install-tarpaulin.sh
src/: currency_formatter.rs  currency_parser.rs  data_loader.rs  data_provider.rs  lib.rs  main.rs  message_handler.rs  message_router.rs  models.rs  product_data_source.rs  product_service.rs  schema.rs  test_utils.rs
src/currency_handling/: currency_formatter.rs  currency_parser.rs
src/data_loader/: data_provider.rs  mod.rs
src/services/: balance_service.rs  mod.rs  product_service.rs  transaction_service.rs  user_service.rs
